--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0",
-    "react-beautiful-dnd": "https://esm.sh/react-beautiful-dnd@^13.1.1",
-    "react-dropzone": "https://esm.sh/react-dropzone@^14.2.3"
+    "react/": "https://esm.sh/react@18.2.0/",
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@18.2.0,react-dom@18.2.0",
+    "react-beautiful-dnd": "https://esm.sh/react-beautiful-dnd@13.1.1?deps=react@18.2.0,react-dom@18.2.0",
+    "react-dropzone": "https://esm.sh/react-dropzone@14.2.3?deps=react@18.2.0"
   }
 }
 </script>
