--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     "react-dom": "https://esm.sh/react-dom@18.2.0",
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@18.2.0,react-dom@18.2.0",
     "react-beautiful-dnd": "https://esm.sh/react-beautiful-dnd@13.1.1?deps=react@18.2.0,react-dom@18.2.0",
-    "react-dropzone": "https://esm.sh/react-dropzone@14.2.3?deps=react@18.2.0"
+    "react-dropzone": "https://esm.sh/react-dropzone@14.2.3?deps=react@18.2.0",
+    "firebase/": "https://esm.sh/firebase@^12.9.0/"
   }
 }
 </script>
