feat: Integrate AI Studio page and Gemini API
Adds a new AI Studio page accessible via the header navigation and protected routes. This page will serve as the entry point for users to interact with AI functionalities.

The Gemini API client (`@google/genai`) has been installed and is now available for use within the application.

This change includes:
- Adding the AI Studio route and page component.
- Updating the header navigation to include a link to AI Studio.
- Installing the `@google/genai` package.
- Updating `index.html` and `package.json` to reflect the new dependency.
- Adjusting `AuthContext` to correctly handle potential undefined user fields for Firestore.
- Removing a developer helper function for self-promotion from `ProfilePage`.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@18.2.0,react-dom@18.2.0",
     "react-beautiful-dnd": "https://esm.sh/react-beautiful-dnd@13.1.1?deps=react@18.2.0,react-dom@18.2.0",
     "react-dropzone": "https://esm.sh/react-dropzone@14.2.3?deps=react@18.2.0",
-    "firebase/": "https://esm.sh/firebase@^12.9.0/"
+    "firebase/": "https://esm.sh/firebase@^12.9.0/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.41.0"
   }
 }
 </script>
